--- a/Bonfire/Views/SeedlingsWindow.xaml
+++ b/Bonfire/Views/SeedlingsWindow.xaml
@@ -35,7 +35,7 @@
 
         <DataGrid 
                         ItemsSource="{Binding SeedlingsView }"
-                      AutoGenerateColumns="True"
+                      AutoGenerateColumns="False"
                       VerticalAlignment="Top"
                       Grid.Row="1"
                       IsReadOnly="True"
@@ -52,21 +52,27 @@
             </i:Interaction.Behaviors>
 
 
-            <!--<DataGrid.Columns >
-                <DataGridTextColumn Header="Культура" Binding="{Binding Culture}" Width="150"/>
-                <DataGridTextColumn Header="Сорт" Binding="{Binding Sort}" Width="*"/>
-                <DataGridTextColumn Header="Производитель" Binding="{Binding Producer}" Width="180"/>
-                <DataGridTextColumn Header="Количество" Binding="{Binding Amount}" Width="80"/>
-                <DataGridTextColumn Header="Дата посадки" Binding="{Binding LandingData}" Width="150"/>
-                <DataGridTextColumn Header="Взошли" Binding="{Binding GerminationData}" Width="100"/>
-                <DataGridTextColumn Header="Закалка" Binding="{Binding QuenchingDate}" Width="100"/>
-                <DataGridCheckBoxColumn Header="Карантин" Binding="{Binding IsQuarantine}" IsReadOnly="True" Width="100"/>
+            <DataGrid.Columns >
+                <DataGridTextColumn Header="Культура" Binding="{Binding Plant.PlantCulture.Name}" Width="150"/>
+                <DataGridTextColumn Header="Сорт" Binding="{Binding Plant.PlantSort.Name}" Width="*"/>
+                <DataGridTextColumn Header="Производитель" Binding="{Binding Plant.PlantSort.Producer.Name}" Width="180"/>
+                <DataGridTextColumn Header="Количество, г" Binding="{Binding Weight}" Width="100"/>
+                <DataGridTextColumn Header="Количество, шт" Binding="{Binding Quantity}" Width="100"/>
+                
 
 
 
 
 
-            </DataGrid.Columns>-->
+            </DataGrid.Columns>
+
+            <!--<DataGridTextColumn Header="Дата посадки" Binding="{Binding LandingData}" Width="150"/>
+            <DataGridTextColumn Header="Взошли" Binding="{Binding GerminationData}" Width="100"/>
+            <DataGridTextColumn Header="Закалка" Binding="{Binding QuenchingDate}" Width="100"/>
+            <DataGridCheckBoxColumn Header="Карантин" Binding="{Binding IsQuarantine}" IsReadOnly="True" Width="100"/>-->
+
+
+
         </DataGrid>
 
         <!--Кнопки сортировки-->
