--- a/Bonfire/Views/SeedlingsWindow.xaml
+++ b/Bonfire/Views/SeedlingsWindow.xaml
@@ -46,7 +46,7 @@
                       Grid.ColumnSpan="3" HorizontalAlignment="Center"
                       EnableColumnVirtualization="True"
                       EnableRowVirtualization="True"
-                      SelectedItem="{Binding SelectedConcreteSeedlingViewItem}">
+                      SelectedItem="{Binding SelectedSeedlingViewItem}">
 
             <i:Interaction.Behaviors>
                 <templates:ScrollIntoViewBehavior/>
@@ -54,12 +54,12 @@
 
 
             <DataGrid.Columns >
-                <DataGridTextColumn Header="Культура" Binding="{Binding Plant.PlantCulture.Name}" Width="150"/>
-                <DataGridTextColumn Header="Сорт" Binding="{Binding Plant.PlantSort.Name}" Width="*"/>
-                <DataGridTextColumn Header="Производитель" Binding="{Binding Plant.PlantSort.Producer.Name}" Width="180"/>
+                <DataGridTextColumn Header="Культура" Binding="{Binding Culture}" Width="150"/>
+                <DataGridTextColumn Header="Сорт" Binding="{Binding Sort}" Width="*"/>
+                <DataGridTextColumn Header="Производитель" Binding="{Binding Producer}" Width="180"/>
                 <DataGridTextColumn Header="Количество, г" Binding="{Binding Weight}" Width="100"/>
                 <DataGridTextColumn Header="Количество, шт" Binding="{Binding Quantity}" Width="100"/>
-                <DataGridTextColumn Header="Дата посадки" Binding="{Binding SeedlingInfos[0].LandingDate, StringFormat=dd.MM.yyyy}"/>
+                <DataGridTextColumn Header="Дата посадки" Binding="{Binding LandingData, StringFormat=dd.MM.yyyy}"/>
                 
             </DataGrid.Columns>
 
