--- a/Bonfire/Views/SeedlingsWindow.xaml
+++ b/Bonfire/Views/SeedlingsWindow.xaml
@@ -101,7 +101,7 @@
                                     </Style>
                                 </DataGridTextColumn.ElementStyle>
                             </DataGridTextColumn>
-                            <DataGridTextColumn Header="Дата всхода" Binding="{Binding GerminationData}" Width="150">
+                            <DataGridTextColumn Header="Дата всхода" Binding="{Binding GerminationData, StringFormat=dd.MM.yyyy}" Width="150">
                                 <DataGridTextColumn.ElementStyle>
                                     <Style TargetType="TextBlock">
                                         <Setter Property="HorizontalAlignment" Value="Center" />
@@ -182,7 +182,9 @@
         <Border Grid.Row="3" Grid.Column="0" CornerRadius="10" Style="{StaticResource SeedsBorderStyle}" 
                 Margin="710,0,0,0" Grid.ColumnSpan="3"/>
         <Border Grid.Row="1" Grid.Column="3" CornerRadius="10" Style="{StaticResource SeedsBorderStyle}" HorizontalAlignment="Stretch"
-         Margin="10,0,10,10" />
+         Margin="10,0,10,10" Height="100" VerticalAlignment="Top"/>
+        <Border Grid.Row="1" Grid.Column="3" CornerRadius="10" Style="{StaticResource SeedsBorderStyle}" HorizontalAlignment="Stretch"
+                Margin="10,110,10,10" />
         <Border Grid.Row="3" Grid.Column="3" CornerRadius="10" Style="{StaticResource SeedsBorderStyle}" HorizontalAlignment="Stretch"
          Margin="10,0,10,0" />
 
@@ -235,6 +237,22 @@
          Content="Добавить" Command="{Binding AddOrCorrectSeedlingCommand}" />
         <Button Grid.Row="3" Grid.Column="3" Margin="0,165,50,0" Style="{StaticResource SeedsButtonStyle}"
         Content="Удалить" Command="{Binding DeleteSeedlingCommand}" HorizontalAlignment="Right" />
+
+        <TextBlock Grid.Column="1" Grid.Row="3" Margin="650,10,0,0 " Style="{StaticResource SeedsTextBlockStyle}"
+                   Text="Добавление всходов" HorizontalAlignment="Center" Width="200" FontSize="18" FontWeight="Bold" Grid.ColumnSpan="2"/>
+        <TextBlock Grid.Row="3" Grid.Column="1" Margin="680,40,0,0" Style="{StaticResource SeedsTextBlockStyle}"
+                   Width="100" Text="Дата всхода"  Grid.ColumnSpan="2"/>
+        <DatePicker Grid.Row="3" Grid.Column="1" Margin="680,70,0,0" Style="{StaticResource SeedsDatePickerStyle}"
+                    SelectedDate="{Binding GerminationDate, UpdateSourceTrigger=PropertyChanged}"  Grid.ColumnSpan="2"/>
+        <TextBlock Grid.Row="3" Grid.Column="1" Margin="810,40,0,0" Style="{StaticResource SeedsTextBlockStyle}"
+                   Width="60" Text="Кол-во"  Grid.ColumnSpan="2"/>
+        <TextBox Grid.Row="3" Grid.Column="1" Margin="810,70,0,0" Width="60" Height="24" HorizontalAlignment="Left" VerticalAlignment="Top"
+                 TextAlignment="Center" Text="{Binding Germinate}" Grid.ColumnSpan="2"/>
+        <Button Grid.Row="3" Grid.Column="1" Margin="900,70,0,0" Style="{StaticResource SeedsButtonStyle}"
+                Content="Взошло" Command="{Binding GerminateSeedlingCommand}"  Grid.ColumnSpan="2" />
+
+
+
 
 
     </Grid>
