--- a/Bonfire/Templates/SeedsViewStyle.xaml
+++ b/Bonfire/Templates/SeedsViewStyle.xaml
@@ -1,5 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+                    xmlns:templates="clr-namespace:Bonfire.Templates">
 
     <Style x:Key="SeedsChoiceButtonStyle" TargetType="Button">
         <Setter Property="Width" Value="40"/>
@@ -81,6 +83,8 @@
         <Setter Property="HorizontalAlignment" Value="Left"/>
         <Setter Property="VerticalAlignment" Value="Top"/>
         <Setter Property="TextAlignment" Value="Center"/>
+        
+
     </Style>
     
     <Style x:Key="SeedsDatePickerStyle" TargetType="DatePicker">
